--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,10 @@
 const express = require("express");
+const cors = require("cors");
+
 const app = express();
+
 app.use(express.json());
-app.use(require("cors")());
+app.use(cors());
 
 let lastValue = 0;
 
@@ -15,8 +18,7 @@ app.get("/data", (req, res) => {
     res.json({ value: lastValue });
 });
 
-app.listen(process.env.PORT || 3000, () => {
-    console.log("Servidor corriendo");
+const PORT = process.env.PORT || 3000;
+app.listen(PORT, () => {
+    console.log(`Servidor corriendo en el puerto ${PORT}`);
 });
-
-
